<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/EditText"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:editable="false"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnC"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btntext_C"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@+id/EditText"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btnBracket"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/Correction"
            android:textAlignment="center"
            android:textSize="28sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btnProc"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_Proc"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_div"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_div"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="260dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3">


        <Button
            android:id="@+id/btn7"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btntext_7"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/EditText"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn8"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btntext_8"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn9"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btntext_9"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_x"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btntext_x"
            android:textAlignment="center"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="260dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4">


        <Button
            android:id="@+id/btn4"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn5"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn6"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_Minus"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_Minus"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="260dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5">


        <Button
            android:id="@+id/btn1"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/EditText"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn2"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn3"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_Plus"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_Plus"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="260dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnSign"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_Choice"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintTop_toBottomOf="@+id/EditText"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn0"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_0"
            android:textSize="30sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btnDot"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/btn_Dot"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="196dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_equals"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"

            android:text="@string/btn_equals"
            android:textSize="40sp"
            app:rippleColor="#43A047"
            app:strokeColor="#43A047"
            tools:layout_editor_absoluteX="291dp"
            tools:layout_editor_absoluteY="260dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>